--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -29,8 +29,6 @@ body {
     transition: all 800ms ease-in-out;
     z-index: -1;
     position: absolute;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 0.8) 100%);
-
 }
 .div-main:hover::after {
     content: '';
@@ -44,7 +42,6 @@ body {
     transition: all 500ms ease-in-out;
     z-index: 1;
     position: absolute;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 01) 100%, rgba(255, 187, 0, 0,1) 60%, rgba(0, 0, 0, 0.8) 100%);
 }
 
 /* ceomço heading */
@@ -55,7 +52,7 @@ body {
     position: fixed;
     z-index: 20;
     background-color: rgba(0, 0, 0, 0.2);
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 0.8) 100%);
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 0.8) 100%) ;
 }
 .div-heading {
     display: flex;
@@ -88,7 +85,7 @@ body {
 .nav-top ul li a {
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.2) 0, rgba(0, 0, 0, 0.1) 60%, rgba(0, 0, 0, 0.6) 100%);
     border-radius:0.4375rem;
-    padding: 0.1875rem0.4375rem;
+    padding: 0.1875rem 0.4375rem;
     display: block;
     position: relative;
 }
@@ -185,7 +182,7 @@ body {
 .h1-main {
     text-align: center;
     font-size: 4rem;
-    margin: 0.625 rem,;
+    margin: 0.625rem;
 }
 .main h2 {
     font-size: 2.6rem;
@@ -239,15 +236,123 @@ body {
         transition: all 300ms ease-in-out;
 }
 
-.sobremim {
-    height: 100vh;
-}
+
 /* aqui acaba o main */
-.sobremim {
+#sobremim {
     width: 100%;
     height: 100%;
     min-height: 100vh;
     background-image: url('../img/subtle-prism.png');
     background-size: cover;
-    color: black;
+    color:#ffdbc1;
+    display: flex;
+    position: relative;
+    justify-content: center ;
+    
+}
+.sobremim h3 {
+    font-size: 4rem;
+    font-family: 'Montserrat', sans-serif;
+    margin-bottom: 0.2rem;
+    margin-left: 0.4rem;
+    text-shadow: 0.1875rem 0.1875rem black;
+
+}
+.sobremim p {
+    font-size: 1.35rem;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 0.4rem;
+    border-radius: 1rem;
+}
+.sobre-content {
+    width: 75rem;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 33.3125rem  1fr;
+    z-index: 2;
+    position: relative;
+}
+.sobremim {
+    margin-top: 3rem; 
+    text-align: start;
+}
+.sombra-2 {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.8) 100%);
+    z-index:1 ;
+}
+
+.sobremim-img {
+    width: 41.6875rem;
+    height: 100vh;
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3rem;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 33vh 33vh 33vh;
+
+    
+}
+.img-2 {
+    width: 14.5rem;
+    height: 11.37rem;
+    margin: 0.625rem;
+    border-radius: 3rem;
+    transition: all 300ms ease-in-out;
+    box-shadow: 0.5rem 0.5rem 1px rgba(0, 0, 0, 0.2);
+    border: 0.01rem solid black;
+    
+}
+.img-2:nth-child(1) {
+    margin-top: 10rem;
+    margin-left: 3rem;
+}
+.img-2:nth-child(2) {
+    margin-left: 3rem;
+
+}
+.img-2:nth-child(3) {
+    margin-top: 10rem;
+    margin-left: 2rem;
+}
+.img-2:nth-child(5) {
+
+    margin-left: 15rem;
+    grid-column: span 2;
+}
+.img-2:nth-child(1):hover {
+    width: 16.5rem;
+    height: 13.37rem;
+    transition: all 300ms ease-in-out;
+
+}
+.img-2:nth-child(2):hover {
+    width: 16.5rem;
+    height: 13.37rem;
+    transition: all 300ms ease-in-out;
+
+}
+.img-2:nth-child(3):hover {
+    width: 16.5rem;
+    height: 13.37rem;
+    transition: all 300ms ease-in-out;
+
+}
+
+.img-2:nth-child(4):hover {
+    width: 16.5rem;
+    height: 13.37rem;
+    transition: all 300ms ease-in-out;
+
+}
+.img-2:nth-child(5):hover {
+    width: 16.5rem;
+    height: 13.37rem;
+    transition: all 300ms ease-in-out;
+
 }
