--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -590,7 +590,11 @@ footer h2 {
     grid-row-start: 1;
 
 }
-
+.img-grid:hover {
+    width: 13.5rem;
+    height: 11.37rem;
+    transition: 0;
+}
 .grid.img {
     grid-template-columns: 32.5rem;
 }
@@ -606,6 +610,18 @@ footer h2 {
         grid-template-columns: 1fr;
     
     }
+    .img-grid:hover {
+        width: 14.5rem;
+        height: 11.37rem;
+        transition: 0;
+    }
+    .img-grid {
+        width: 14.5rem;
+        height: 11.37rem;
+        margin: 0.625rem;
+        border-radius: 3rem;
+        transition: none;
+       
     .img-grid:nth-child(1) {
         margin-top: 0;
         margin-left: 0;
@@ -701,5 +717,6 @@ footer h2 {
     .text-sections h2 {
         font-size: 3rem;
     }
+   
 }
 
